# CalibrADE

./: .gitignore  LICENSE  README.md  pyproject.toml
.dvc/: config
calibrade/: calibrate_intrinsics.py  constants.py  dispersion.py  find_chessboard_corners.py  opencv_intro.py  opencv_visualize_extrinsics.py  project.py  prune.py  root.py  run_repeated_calibrations.sh  util.py  visualize.py  visualize_repeated_calibrations.py
data/: .gitignore  1.jpeg.dvc  10.jpeg.dvc  11.jpeg.dvc  12.jpeg.dvc  13.jpeg.dvc  14.jpeg.dvc  15.jpeg.dvc  16.jpeg.dvc  17.jpeg.dvc  2.jpeg.dvc  3.jpeg.dvc  4.jpeg.dvc  5.jpeg.dvc  6.jpeg.dvc  7.jpeg.dvc  8.jpeg.dvc  9.jpeg.dvc  images.dvc  opencv_examples.dvc  slic_example.png.dvc
data/example_calibration_results/: .gitignore  left_intrinsics.yml.dvc
data/images/big_board/eric_laptop/2021-11-27-120857/: .gitignore  chessboard_corners.pickle.dvc  focus_metric.pickle.dvc  image-000001.png.dvc  image-000002.png.dvc  image-000003.png.dvc  image-000004.png.dvc  image-000005.png.dvc  image-000006.png.dvc  image-000007.png.dvc  image-000008.png.dvc  image-000009.png.dvc  image-000010.png.dvc  image-000011.png.dvc  image-000012.png.dvc  image-000013.png.dvc  image-000014.png.dvc  image-000015.png.dvc  image-000016.png.dvc  image-000017.png.dvc  image-000018.png.dvc  (+1945 more)
data/videos/: .gitignore  small_board.dvc
data/videos/big_board/: .gitignore  PXL_20211101_190909831.mp4.dvc  PXL_20211101_191929865.mp4.dvc  PXL_20211101_192056362.mp4.dvc  PXL_20211101_192157889.mp4.dvc  eric_laptop.dvc
dev/: gaussian_process.py  plot_gpr_noisy_targets.py
(+42343 files in other folders)
