[tool.poetry]
name = "CalibrADE"
version = "0.1.1"
description = "A toolbox for end-to-end camera calibration with minimal pain."
authors = ["Aarrushi Shandilya", "David Russell <davidrus@andrew.cmu.edu>", "Eric Schneider"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

opencv-python = "^4.5.4"
numpy = "^1.21.3"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
dvc = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
